# netgrain

./: .gitignore  .gitmodules  .ignore  README.md  algorithm.py  build.sh  directoryView.txt  precompile.sh
common/: arena.hpp  array_list.hpp  blocking_queue.hpp  queue.hpp  string.hpp
core/src/generator/: bear.cpp  benchmarks.cpp  benchmarks.hpp  bull.cpp  connect_multi.cpp  dataTransfer.cpp  data_transfer.hpp  generator.cpp  generator.hpp  main.cpp  ou.cpp  send.cpp  send_multi.cpp  tester.cpp  tester.hpp
core/src/simulator/: broker.cpp  broker.hpp  def.hpp  engine.cpp  engine.hpp  historicalData.cpp  historicalData.hpp  index.html  initial_market.json  main.cpp  main.old  order.hpp  parser  persistence_queue.hpp  python_broker_module.cpp  python_strategy.cpp  python_strategy.hpp  simulator.cpp  simulator.hpp  start.txt  stats.cpp  strategy.hpp  test_engine.cpp  test_simulator.cpp
core/src/simulator/client/: main.cpp
core/src/simulator/sample_algorithms/: buy_and_hold.py  rolling_limit_buy.py  sma_crossover.py  test.sh  test_algs.sh  test_conditional_purchase.py  test_single_purchase.py
core/src/simulator/server/: main.cpp
core/src/simulator/temp_data/: uploaded_test.csv
data/: stock_load.py
data/Crypto/: ADA.csv  AVAX.csv  BNB.csv  BTC.csv  DOT.csv  ETH.csv  LINK.csv  LTC.csv  SHIB.csv  SOL.csv  XRP.csv
data/Forex/: AUDUSD.csv  EURGBP.csv  EURJPY.csv  EURUSD.csv  GBPJPY.csv  GBPUSD.csv  NZDUSD.csv  USDCAD.csv  USDCHF.csv  USDJPY.csv
data/Futures/: COPPER.csv  CORN.csv  CRUDE_OIL.csv  GOLD.csv  NASDAQ_FUT.csv  NAT_GAS.csv  PLATINUM.csv  SILVER.csv  SP500_FUT.csv  WHEAT.csv
database/: charles  connector.cpp  setup.sql  sim_writer.hpp
exports/: 0x11c808a00.json  0x11c80e000.json  0x12c00da00.json  0x142014000.json  0x143008200.json  0x143808a00.json  0x14980fe00.json  0x149814c00.json  0x149819400.json  0x14b80b200.json  0x14b80f800.json  0x14c008a00.json  0x158814c00.json  0x158819600.json  0x15881dc00.json
lib/libpqxx/include/pqxx/: config-public-compiler.h
lib/pybind_files/include/: expat_external.h  sqlite3.h
lib/pybind_files/include/python3.12/: pyconfig.h
lwc/: index.html  package.json
lwc/src/: main.ts  style.css
research/: notes.typ
scripting/: algo_test_1.py  algo_test_2.py  algo_test_3.py  bubble.py  flash_crash.py  main.py  multiple.py  pyproject.toml
sdk/netgrain/: strategy.py
sims/1/: simResults
sims/2/: simResults
web/: package.json
web/my-project/: index.html  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts
web/my-project/src/: App.tsx  index.css
web/my-project/src/components/: Account.tsx  AlgoTable.tsx  Chart.tsx  ChartSelect.tsx  CodeEditor.tsx  EndSimulation.tsx  ForgotPassword.tsx  Generation.tsx  GridComponent.tsx  History.tsx  Home.tsx  Leaderboard.tsx  LiveChart.tsx  LiveChart.tsx.old  Login.tsx  Metrics.tsx  Registration.tsx  Remix.tsx  ResultsTemplate.tsx  SimResults.tsx  Simulation.tsx  SimulationResults.tsx  (+4 more)
web/webserver/: CMakeLists.txt
web/webserver/my-drogon-app/: .gitignore  .vimrc  CMakeCache.txt  CMakeLists.txt  README.md  docker-compose.yml  main.cc
web/webserver/my-drogon-app/controllers/: HelloWorld.cc
web/webserver/my-drogon-app/test/: CMakeLists.txt
web/webserver/nginx-1.29.7/conf/: nginx.conf
web/webserver/perms2/: cert.pem  key.pem
web/webserver/src/: build.sh  main.cpp
web/webserver/src/sims/1/: simResults
web/webserver/src/sims/10/: simResults
web/webserver/src/sims/14/: marketData  simResults
web/webserver/src/sims/16/: simResults
web/webserver/src/sims/2/: simResults
web/webserver/src/sims/3/: simResults
web/webserver/src/sims/4/: simResults
web/webserver/src/sims/5/: simResults
web/webserver/src/sims/6/: simResults
web/webserver/src/sims/7/: simResults
web/webserver/src/sims/8/: simResults
web/webserver/src/sims/9/: simResults
(+17 files in other folders)
